src/objects/Trailhead_Superbadge__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Trailhead Superbadges</relationshipLabel>
        <relationshipName>Trailhead_Superbadges</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Favourite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Favourite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Superbadge_Description__c</fullName>
        <label>Superbadge Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Superbadge_Image__c</fullName>
        <label>Superbadge Image</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Superbadge_Link__c</fullName>
        <label>Superbadge Link</label>
        <type>Url</type>
    </fields>
    <label>Trailhead Superbadge</label>
    <nameField>
        <label>Superbadge Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trailhead Superbadges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>